fixing bsd license
"bsd" identifier is outdated

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "monkeyAccess"
     ],
     "homepage": "https://github.com/designitgmbh/monkeyAccess",
-    "license": "BSD",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Philipp Pajak",
